# inputbus

./: .gitignore  CMakeLists_v2.txt  IMPLEMENTATION_CHECKLIST.md  MIGRATION_GUIDE.md  README.md  README_V2.md  REFACTORING_SUMMARY.md  TECHNICAL_ANALYSIS.md  build_v2.bat
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
.tmp-vigem/: README.md
.tmp-vigem/src/: Internal.h  ViGEmClient.cpp
core/: CMakeLists.txt
core/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rewsd_core.sln  rewsd_core.vcxproj  rewsd_core.vcxproj.filters
core/src/: main.cpp  main_v2.cpp
core/src/input/: NativeMouseInputService.cpp  NativeMouseInputService.h  RawInputHandler.cpp  RawInputHandler.h  RawInputHandler_v2.cpp  RawInputHandler_v2.h  inputCapture.cpp  inputCapture.h
core/src/ipc/: PipeServer.cpp  PipeServer.h  Protocol.h
core/src/mapping/: BindingTable.h  MappingEngine.h  ProfileManager.h
core/src/vigem/: GamepadState.h  MappingEngine.cpp  MappingEngine.h  MouseAnalogProcessor.cpp  MouseAnalogProcessor.h  MouseAnalogProcessor_v2.cpp  MouseAnalogProcessor_v2.h  MouseCameraProcessor.cpp  MouseCameraProcessor.h  ViGEmManager.cpp  ViGEmManager.h
profiles/: default.json  default_v2.json  fps.json  high_sens_v2.json  precision_v2.json  warzone.json
scripts/: build.ps1  install-driver.bat
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/dist-electron/: ipc-bridge.js  main.js  preload.js
ui/electron/: ipc-bridge.ts  main.ts  (+1 more)
(+35 files in other folders)
